| Bug #15409 | Columns with SET datatype with 64-element sets may not be updated with integers | ||
|---|---|---|---|
| Submitted: | 2 Dec 2005 2:41 | Modified: | 14 Mar 2008 20:57 |
| Reporter: | [ name withheld ] | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: DML | Severity: | S3 (Non-critical) |
| Version: | 4.1.17-BK, 4.1.14 | OS: | Linux (Linux) |
| Assigned to: | Gleb Shchepa | CPU Architecture: | Any |
[2 Dec 2005 2:41]
[ name withheld ]
[4 Dec 2005 15:26]
Valeriy Kravchuk
Thank you for a bug report. Verified just as described on 4.1.17-BK (ChangeSet@1.2478, 2005-12-01 14:26:19+02:00) on Linux.
[3 Jul 2007 22:36]
Kolbe Kegel
Also happening on 5.0.42.
[6 Feb 2008 4:03]
Matt Rowe
Also affects 5.0.45 on 64bit Ubuntu. Though, I have to ask: 2 years?
[7 Feb 2008 10:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/41857 ChangeSet@1.2600, 2008-02-07 14:10:14+04:00, gshchepa@host.loc +3 -0 Fixed bug#15409: Columns with 64-element SET may not be updated with integers. SET column storing procedure has been modified to be 64bit-clean.
[8 Feb 2008 7:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/41915 ChangeSet@1.2600, 2008-02-08 16:04:01+04:00, gshchepa@host.loc +3 -0 Fixed bug#15409: Columns with 64-element SET may not be updated with integers. SET column storing procedure has been modified to be 64bit-clean.
[13 Mar 2008 19:28]
Bugs System
Pushed into 6.0.5-alpha
[13 Mar 2008 19:35]
Bugs System
Pushed into 5.1.24-rc
[13 Mar 2008 19:42]
Bugs System
Pushed into 5.0.60
[14 Mar 2008 20:57]
Jon Stephens
Documented in the 5.0.60, 5.1.24, and 6.0.5 changelogs as follows:
A SET column whose definition specified 64 elements
could not be updated using integer values.
[29 Mar 2008 19:41]
Jon Stephens
Bugfix also documented in 5.1.23-ndb-6.3.11 changelog.
