Fixed bug#15409: Columns with 64-element SET may not be updated with integers.

SET column storing procedure has been modified to be 64bit-clean.